--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(cis_em_promoters)
 export(cluster_em_cross_cor)
 export(coord_to_promoter_names)
+export(deconv_TME)
 export(em_cross_cor)
 export(export_em_cross_mods)
 export(feats_to_knn_matrix)
