updated calculation of genomic cis

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export("%>%")
 export(calc_gene_cor_before_after_deconv)
+export(cis_em_genomic)
 export(cis_em_promoters)
 export(cluster_em_cross_cor)
 export(coord_to_promoter_names)
@@ -20,6 +21,7 @@ import(ggplot2)
 import(misha)
 import(misha.ext)
 import(tidyr)
+importFrom(Rcpp,sourceCpp)
 importFrom(glue,glue)
 importFrom(magrittr,"%>%")
 importFrom(purrr,"%||%")
@@ -34,3 +36,4 @@ importFrom(purrr,walk)
 importFrom(rlang,has_name)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
+useDynLib(methylayer, .registration = TRUE)
