--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,7 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Imports: 
     tgutil,
-    tgstat,    
+    tgstat,
     dplyr,
     purrr,
     misha,
@@ -28,6 +28,9 @@ Imports:
     misha.ext,
     writexl,
     Matrix,
-    vegan
+    vegan,
+    Rcpp
 Remotes: tanaylab/misha,
   tanaylab/misha.ext
+LinkingTo: 
+    Rcpp
