--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,8 @@ export(export_em_cross_mods)
 export(feats_to_knn_matrix)
 export(get_TME_genes)
 export(immune_cafs_signature_from_clust)
+export(intervs_to_mat)
+export(mat_to_intervs)
 export(normalize_immune_cafs_meth)
 export(normalize_mat_knn)
 export(plot_em_cross_cor)
@@ -19,8 +21,6 @@ export(plot_meth_mat_cm)
 export(plot_norm_vs_raw_gene_scatter)
 import(dplyr)
 import(ggplot2)
-import(misha)
-import(misha.ext)
 import(tidyr)
 importFrom(Rcpp,sourceCpp)
 importFrom(glue,glue)
