--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(deconv_TME)
 export(em_cross_cor)
 export(export_em_cross_mods)
 export(feats_to_knn_matrix)
+export(gene_promoter_cors)
 export(get_TME_genes)
 export(immune_cafs_signature_from_clust)
 export(intervs_to_mat)
